apps/organizr-v2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    traefik.enable: 'true'
    traefik.frontend.rule: Host:lab.emc2.build
    traefik.port: '80'
  labels:
    app: organizr
  name: organizr-v2
  namespace: media
spec:
  selector:
    matchLabels:
      app: organizr
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        traefik.enable: 'true'
        traefik.frontend.rule: Host:lab.emc2.build
        traefik.port: '80'
      labels:
        app: organizr
    spec:
      containers:
      - env:
        - name: PGID
          value: '1000'
        - name: PUID
          value: '1000'
        - name: TZ
          value: America/Vancouver
        image: organizr/organizr:latest
        imagePullPolicy: IfNotPresent
        name: organizr
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 10m
            memory: 64Mi
          limits:
            cpu: 500m
            memory: 256Mi
        volumeMounts:
        - mountPath: /config
          name: organizr-config
      hostname: organizr
      restartPolicy: Always
      tolerations:
      - key: "maintenance"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 30
      # This DNS config modifies /etc/resolv.conf. Needed so that external domains can resolve outside of the cluster,
      # and not get trapped in the wildcard that leads back to lab.emc2.build.
      dnsConfig:
        # nameservers: ["8.8.8.8"]
        options:
          - name: ndots
            value: "2"
      volumes:
      - name: organizr-config
        persistentVolumeClaim:
          claimName: organizr-config
