apps/organizr-v2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: organizr
  namespace: media
spec:
  ports:
  - name: organizr
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: organizr
